--- a/src/order_detail.html
+++ b/src/order_detail.html
@@ -16,27 +16,28 @@
 			 	<h1>订单详情</h1>
 			 </header>
 			 <div class="banner">
-			 	<span class="status">待发货</span>
-			 	<img src="http://og20zwqwb.bkt.clouddn.com/ToBeShipped.png" alt="" />
+			 	<span class="status"></span>
+			 	<img src="" alt="" />
 			 </div>
 			 <div class="addressInfo">
 			 	<div>
-			 		<p>收货人：<span class="consignee">zhangsan</span></p>
-			 		<p class="mobile">12345678945</p>
+			 		<p>收货人：<span class="consignee"></span></p>
+			 		<p class="mobile"></p>
 			 	</div>
 			 	<div>
-			 		<p>身份证：<span class="idno">142603199202162092</span></p>
-			 		<p>邮编：<span class="postcode">0236587</span></p>
+			 		<p>身份证：<span class="idno"></span></p>
+			 		<p>邮编：<span class="postcode"></span></p>
 			 	</div>
 			 	<div>
-			 		<p>收货地址：<span class="address">北京市海淀区农大南路树村路万霖大厦B座212345室</span></p>
+			 		<p>收货地址：<span class="address"></span></p>
 			 	</div>
 			 </div>
 			 <div class="order">
 			 	<div class="title">
-					<span class="tImgBox"><img src="" style="width:100%; border-radius:50%;"/></span><span>林咩咩澳洲代购</span><i class="status">待发货</i>
+					<span class="tImgBox"><img src="" style="width:100%; border-radius:50%;"/></span><span class="nickname"></span><i class="status"></i>
 				</div>
-				<div class="details">
+				<div class="orderGoods"></div>
+				<!--<div class="details">
 					<span class="dImgBox"><img src="" alt="" /></span>
 					<div class="info">
 						<p class="goodsInfo">荷兰原产牛栏婴幼儿奶粉专场trilo 1段荷兰原产牛栏婴幼儿奶</p>
@@ -44,14 +45,14 @@
 					</div>
 					<i class="price">￥180</i>
 					<i class="num">×2</i>
-				</div>
+				</div>-->
 				<div class="balance">共
-					<span class="number">1</span>件商品，实付款￥<i class="amount">180</i>
+					<span class="number"></span>件商品，实付款￥<i class="amount"></i>
 				</div>
 			 </div>
 			 <div class="time">
-			 	<p class="order_number">订单编号：<span>123456789</span></p>
-			 	<p class="order_time">下单时间：<span>20167895465</span></p>
+			 	<p class="order_number">订单编号：<span></span></p>
+			 	<p class="order_time">下单时间：<span></span></p>
 			 </div>
 			 
 		</div>
