--- a/src/order_list.html
+++ b/src/order_list.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-		<title></title>
+		<title>订单列表</title>
 		<link rel="stylesheet" href="./css/order_list.css" />
 		<script src="./js/require.js"></script>
 		<script src="./js/config.js"></script>
